--- a/pages/detalhes.html
+++ b/pages/detalhes.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header flex flex-wrap justify-between px-10 py-4 bg-gray-300">
         <i class="fa-solid text-4xl fa-arrow-right fa-rotate-180 place-self-center hover:cursor-pointer" id="seta"></i>
-        <img src="img/logo.png" alt="logo" style="max-width: 200px; height: auto;">
+        <img src="../img/logo.png" alt="logo" style="max-width: 200px; height: auto;">
     </div>
 
     <div class="mx-10 mt-5 flex gap-5 flex-wrap">
